--- a/XCode/DewertOkin/DewertOkin/RemoteControl/Remote.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RemoteControl/Remote.storyboard
@@ -17,19 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IkC-iq-42e">
-                                <rect key="frame" x="308" y="717" width="56" height="56"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="IkC-iq-42e" secondAttribute="height" multiplier="1:1" priority="900" id="7Dq-1c-AAk"/>
-                                    <constraint firstAttribute="width" constant="56" id="esd-Ou-S7j"/>
-                                    <constraint firstAttribute="height" constant="56" id="pmF-vp-zKr"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="ExtraFunctions:" destination="h1o-HI-eVS" eventType="touchUpInside" id="kyq-eH-FAl"/>
-                                    <segue destination="yXn-m8-abf" kind="show" id="M08-Hb-geb"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Chair" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEt-Ft-Val">
                                 <rect key="frame" x="15" y="114" width="384" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -45,11 +32,11 @@
                                 </constraints>
                                 <state key="normal" image="+Button"/>
                                 <connections>
-                                    <action selector="AddPresetsButton:" destination="h1o-HI-eVS" eventType="touchUpInside" id="Eux-YC-Pdn"/>
+                                    <action selector="AddPresetsButton:" destination="h1o-HI-eVS" eventType="touchUpInside" id="Qwe-8D-j5C"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0YV-jW-udd">
-                                <rect key="frame" x="50" y="717" width="56" height="56"/>
+                                <rect key="frame" x="73" y="717" width="56" height="56"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="56" id="4nr-Lw-urT"/>
                                     <constraint firstAttribute="width" constant="56" id="7TS-f7-HfC"/>
@@ -57,33 +44,44 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="PresetsButton:" destination="h1o-HI-eVS" eventType="touchUpInside" id="JNa-Qb-Z9U"/>
+                                    <action selector="PresetsButton:" destination="h1o-HI-eVS" eventType="touchUpInside" id="ieX-4e-Mfh"/>
                                 </connections>
                             </button>
                             <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="ChairNormal" translatesAutoresizingMaskIntoConstraints="NO" id="J9R-PK-aQG">
-                                <rect key="frame" x="10" y="215" width="394" height="422"/>
+                                <rect key="frame" x="10" y="180" width="394" height="457"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="tIL-qN-5kw" appends="YES" id="f3D-AM-JLS"/>
                                 </connections>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7LG-TT-Cct" userLabel="Extra Functions Button">
+                                <rect key="frame" x="285" y="717" width="56" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="Bvm-A0-got"/>
+                                    <constraint firstAttribute="width" constant="56" id="h1x-6j-5Kk"/>
+                                    <constraint firstAttribute="width" secondItem="7LG-TT-Cct" secondAttribute="height" multiplier="1:1" priority="900" id="hX4-x2-4US"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="ExtraFunctions:" destination="h1o-HI-eVS" eventType="touchUpInside" id="dC0-au-gKQ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="uty-hF-LTZ" firstAttribute="trailing" secondItem="IkC-iq-42e" secondAttribute="trailing" priority="600" constant="50" id="1S3-im-6Mj"/>
-                            <constraint firstItem="0YV-jW-udd" firstAttribute="leading" secondItem="uty-hF-LTZ" secondAttribute="leading" priority="600" constant="50" id="6z1-vN-9LH"/>
-                            <constraint firstItem="IkC-iq-42e" firstAttribute="leading" secondItem="Xjl-Wp-KTM" secondAttribute="trailing" priority="600" constant="73" id="BQY-U0-s2W"/>
-                            <constraint firstItem="IkC-iq-42e" firstAttribute="top" secondItem="J9R-PK-aQG" secondAttribute="bottom" constant="80" id="GM9-jp-54I"/>
+                            <constraint firstItem="uty-hF-LTZ" firstAttribute="bottom" secondItem="7LG-TT-Cct" secondAttribute="bottom" constant="40" id="2c9-np-gla"/>
+                            <constraint firstItem="J9R-PK-aQG" firstAttribute="top" secondItem="A7b-hz-zBK" secondAttribute="top" constant="180" id="4ul-zY-Aw7"/>
                             <constraint firstItem="J9R-PK-aQG" firstAttribute="leading" secondItem="uty-hF-LTZ" secondAttribute="leading" constant="10" id="IF6-tE-hn4"/>
                             <constraint firstItem="FEt-Ft-Val" firstAttribute="top" secondItem="uty-hF-LTZ" secondAttribute="top" constant="70" id="KSd-AP-Rdk"/>
-                            <constraint firstItem="J9R-PK-aQG" firstAttribute="top" secondItem="FEt-Ft-Val" secondAttribute="bottom" constant="80" id="PQh-Oc-kfc"/>
-                            <constraint firstItem="uty-hF-LTZ" firstAttribute="bottom" secondItem="IkC-iq-42e" secondAttribute="bottom" priority="750" constant="40" id="ZfX-k2-tfg"/>
+                            <constraint firstItem="7LG-TT-Cct" firstAttribute="leading" secondItem="Xjl-Wp-KTM" secondAttribute="trailing" priority="750" constant="50" id="Ocj-Ng-aaM"/>
+                            <constraint firstItem="Xjl-Wp-KTM" firstAttribute="leading" secondItem="0YV-jW-udd" secondAttribute="trailing" priority="800" constant="50" id="bZi-ht-27D"/>
                             <constraint firstItem="uty-hF-LTZ" firstAttribute="trailing" secondItem="FEt-Ft-Val" secondAttribute="trailing" constant="15" id="bl5-Fk-UZj"/>
                             <constraint firstItem="uty-hF-LTZ" firstAttribute="bottom" secondItem="0YV-jW-udd" secondAttribute="bottom" priority="750" constant="40" id="dcf-Ld-aSz"/>
                             <constraint firstItem="FEt-Ft-Val" firstAttribute="leading" secondItem="uty-hF-LTZ" secondAttribute="leading" constant="15" id="e7B-lb-Wtr"/>
-                            <constraint firstItem="Xjl-Wp-KTM" firstAttribute="leading" secondItem="0YV-jW-udd" secondAttribute="trailing" priority="600" constant="73" id="eSO-mv-BI7"/>
+                            <constraint firstItem="Xjl-Wp-KTM" firstAttribute="top" secondItem="J9R-PK-aQG" secondAttribute="bottom" constant="80" id="ljh-FG-BQN"/>
                             <constraint firstItem="uty-hF-LTZ" firstAttribute="trailing" secondItem="J9R-PK-aQG" secondAttribute="trailing" constant="10" id="p8u-6u-qAB"/>
                             <constraint firstItem="uty-hF-LTZ" firstAttribute="bottom" secondItem="Xjl-Wp-KTM" secondAttribute="bottom" priority="750" constant="40" id="qCE-Cp-YR0"/>
+                            <constraint firstItem="Xjl-Wp-KTM" firstAttribute="centerX" secondItem="A7b-hz-zBK" secondAttribute="centerX" priority="800" id="xWU-ic-02g"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uty-hF-LTZ"/>
                     </view>
@@ -91,7 +89,7 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="AddPresetsButtonObj" destination="Xjl-Wp-KTM" id="Is4-zt-G04"/>
-                        <outlet property="ExtraFunctionsButtonObj" destination="IkC-iq-42e" id="XUJ-Xd-LLK"/>
+                        <outlet property="ExtraFunctionsButtonObj" destination="7LG-TT-Cct" id="0Ym-6e-Vhu"/>
                         <outlet property="Image" destination="J9R-PK-aQG" id="jXg-Mc-YrR"/>
                         <outlet property="PresetsButtonObj" destination="0YV-jW-udd" id="Ytd-hR-vis"/>
                     </connections>
