--- a/XCode/DewertOkin/DewertOkin/Presets-Reminder-Timer/Timer/Timer.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Presets-Reminder-Timer/Timer/Timer.storyboard
@@ -73,13 +73,12 @@
                                     <navigationItem title="Timer" id="mny-ZI-h0Q">
                                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="FLn-TY-fAB">
                                             <connections>
-                                                <action selector="cancelButton:" destination="94w-4O-QUa" id="i4z-yN-LCP"/>
                                                 <segue destination="iw2-Bw-fjp" kind="unwind" unwindAction="addTimerWasCanceled:" id="P7s-7Q-4mI"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="vwW-4h-Hht">
                                             <connections>
-                                                <action selector="doneButton:" destination="94w-4O-QUa" id="c4k-6t-6e4"/>
+                                                <action selector="doneTimer:" destination="94w-4O-QUa" id="Ug6-aj-LCV"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -116,8 +115,6 @@
                         <viewLayoutGuide key="safeArea" id="hoS-sH-BsJ"/>
                     </view>
                     <connections>
-                        <outlet property="cancelButton" destination="FLn-TY-fAB" id="Cac-fx-H9r"/>
-                        <outlet property="doneButton" destination="vwW-4h-Hht" id="9co-SV-TfO"/>
                         <outlet property="name" destination="Oex-EW-que" id="aoB-Bv-ie0"/>
                         <outlet property="timePicker" destination="7aN-So-Cv2" id="Vr0-cZ-cen"/>
                         <segue destination="iw2-Bw-fjp" kind="unwind" identifier="TimerWasAdded" unwindAction="addTimer:" id="WbD-eG-Xfg"/>
