--- a/XCode/DewertOkin/DewertOkin/Base.lproj/LaunchScreen.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Base.lproj/LaunchScreen.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,13 +17,27 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="okinSmartRemote" translatesAutoresizingMaskIntoConstraints="NO" id="Wsu-wL-Uib">
+                                <rect key="frame" x="67" y="213" width="241" height="241"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Wsu-wL-Uib" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="1Tx-OH-ULi"/>
+                            <constraint firstItem="Wsu-wL-Uib" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="193" id="5Rf-PZ-XvX"/>
+                            <constraint firstItem="Wsu-wL-Uib" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="7Ry-FA-4rB"/>
+                            <constraint firstItem="Wsu-wL-Uib" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="97t-8t-yKO"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="okinSmartRemote" width="690" height="690"/>
+    </resources>
 </document>
