--- a/XCode/DewertOkin/DewertOkin/Presets-Reminder-Timer/Reminder/Reminder.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Presets-Reminder-Timer/Reminder/Reminder.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jhm-Uz-Ae2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VUz-m7-wiu">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,18 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BPS-CK-Rs2">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <items>
-                                    <navigationItem title="Reminder" id="TLb-vR-eOu">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ioF-nw-O2v">
-                                            <connections>
-                                                <segue destination="nr4-g2-C3t" kind="show" id="WW9-UO-g0g"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="B3x-XU-Igp">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -39,17 +28,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="B3x-XU-Igp" firstAttribute="top" secondItem="BPS-CK-Rs2" secondAttribute="bottom" id="5qx-Ma-bSk"/>
-                            <constraint firstItem="B3x-XU-Igp" firstAttribute="trailing" secondItem="Q6o-W9-dCQ" secondAttribute="trailing" id="DVO-aH-IgQ"/>
-                            <constraint firstItem="B3x-XU-Igp" firstAttribute="leading" secondItem="Q6o-W9-dCQ" secondAttribute="leading" id="EfS-UF-xBi"/>
-                            <constraint firstItem="BPS-CK-Rs2" firstAttribute="trailing" secondItem="Q6o-W9-dCQ" secondAttribute="trailing" id="SL9-G6-6lr"/>
-                            <constraint firstItem="B3x-XU-Igp" firstAttribute="bottom" secondItem="Q6o-W9-dCQ" secondAttribute="bottom" id="Sxo-u0-mHz"/>
-                            <constraint firstItem="BPS-CK-Rs2" firstAttribute="leading" secondItem="Q6o-W9-dCQ" secondAttribute="leading" id="T6l-dJ-TuD"/>
-                            <constraint firstItem="BPS-CK-Rs2" firstAttribute="top" secondItem="Q6o-W9-dCQ" secondAttribute="top" id="k6u-bG-iXW"/>
+                            <constraint firstAttribute="trailing" secondItem="B3x-XU-Igp" secondAttribute="trailing" id="IqW-c0-e8m"/>
+                            <constraint firstItem="B3x-XU-Igp" firstAttribute="top" secondItem="Q6o-W9-dCQ" secondAttribute="top" id="acP-xe-eju"/>
+                            <constraint firstItem="B3x-XU-Igp" firstAttribute="leading" secondItem="n15-FJ-orz" secondAttribute="leading" id="s6F-Ch-000"/>
+                            <constraint firstItem="B3x-XU-Igp" firstAttribute="bottom" secondItem="Q6o-W9-dCQ" secondAttribute="bottom" id="zqm-XH-deF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Q6o-W9-dCQ"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Reminder" image="reminder_icon" id="qDJ-nh-dfI"/>
+                    <navigationItem key="navigationItem" id="iMi-WQ-bak">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="rKP-qR-Liq">
+                            <connections>
+                                <segue destination="nr4-g2-C3t" kind="presentation" id="8iU-h5-w8i"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="B3x-XU-Igp" id="R7c-u4-lJ3"/>
@@ -57,7 +49,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WZQ-F5-KEG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4" y="94.902548725637189"/>
+            <point key="canvasLocation" x="935.20000000000005" y="94.902548725637189"/>
         </scene>
         <!--Add Reminders-->
         <scene sceneID="Dbm-Hx-fvh">
@@ -132,7 +124,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ylw-8h-bwk" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="mvQ-FM-QPO" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="848.79999999999995" y="97.601199400299862"/>
+            <point key="canvasLocation" x="1788" y="97.601199400299862"/>
+        </scene>
+        <!--Reminder-->
+        <scene sceneID="KzA-Qz-DjW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VUz-m7-wiu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Reminder" image="reminder_icon" id="qDJ-nh-dfI"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Wq6-o0-E9t">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="jhm-Uz-Ae2" kind="relationship" relationship="rootViewController" id="wyc-OF-9OL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="txo-SD-I1m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4" y="94.902548725637189"/>
         </scene>
     </scenes>
     <resources>
